--- a/index.html
+++ b/index.html
@@ -136,5 +136,7 @@
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script src="script.js" async defer></script>
+        
+        <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3011ffd1e5f146138e0ce7c898e6b366"}'></script><!-- End Cloudflare Web Analytics -->
     </body>
 </html>
