--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        </header>
        <section id="home">
         <div class="content">
-            <h3>Alex Ladwong</h3>
+            <h3>K.<span>Alex Ladwong</h3>
             <p>Am a junior software developer, cybersecurity engineer
             and Network analyzer.</p>
             <a href="#contact" class="btn">Reach Me</a>
