--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
        <section id="portfolio">
         <div class="secText">
             <h2>Masterpiece Collections</h2>
-            <p>I have developed real-life problem-solving apps in Python, Django, HTML/CSS, JavaScript/Jquery, AWS and APIs such as google maps,
-                Kivy charts and a whole bunch more I can't possibly mention in one sentence! :)<p>
-                NOTE:Every year am Working on Node JS, Facial regonition and Machine Learning using python and unity hub, etc<p> COMING SOON!</p>
+            <p>
+I have developed real-life problem-solving apps in Python, Django, HTML/CSS, JavaScript/Jquery, AWS and APIs such as google maps, Kivy charts and a whole bunch more I can't possibly mention in one sentence! :)
+
+NOTE:Every year am Working on Node JS, Facial regonition and Machine Learning using python and unity hub, etc
+<p>
+****I CREATE STUFFS SOMETIMES.****
         </div>
 
         <div class="content">
