--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         </div>
         <div class="content">
             <div class="servicesBx">
-                <img src="img/wedev.png" alt="web-design.png">
-                <h3>Webs/Application Dev</h3>
+                <a href="https://loancalculator-dw0.pages.dev/" target="_blank">
+            <img src="img/CleanShot 2023-03-01 at 12.42.03@2x.png" alt="img">
+            <p>Web Development/Maintainance </p></a>
             </div>
             <div class="servicesBx">
                 <img src="img/network.png" alt="web-design.png">
