--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </div>
         <div class="content">
             <div class="servicesBx">
-                <a href="https://loancalculator-dw0.pages.dev/" target="_blank">
-            <img src="img/CleanShot 2023-03-01 at 12.42.03@2x.png" alt="img">
-            <p>Web Development/Maintainance </p></a>
+                <div class="servicesBx">
+                <img src="img/wedev.png" alt="web-design.png">
+                <h3>Webs/Application Dev</h3>
             </div>
             <div class="servicesBx">
                 <img src="img/network.png" alt="web-design.png">
@@ -82,8 +82,9 @@ NOTE:Every year am Working on Node JS, Facial regonition and Machine Learning us
 
         <div class="content">
         <div class="imgBx">
+            <a href="https://loancalculator-dw0.pages.dev/" target="_blank">
             <img src="img/CleanShot 2023-03-01 at 12.42.03@2x.png" alt="img">
-            <p>Web Development/Maintainance </p>
+            <p>Web Development/Maintainance </p></a>
         </div>
         <div class="imgBx">
             <img src="img/CleanShot 2023-03-17 at 08.18.40@2x.png" alt="img">
