--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         </div>
         <div class="center">
-            <a href="https://github.com/alexladwong" target="_blank" class="btn">View More</a>
+            <a href="https://github.com/alexladwong/dev.cyber/tree/main" target="_blank" class="btn">View More</a>
             
         </div>
        </section>
