--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="content">
         <div class="imgBx">
-            <a href="https://loancalculator-dw0.pages.dev/" target="_blank">
+            <a href="https://loancalculator-dw0.pages.dev/" title="webloancalculator" target="_blank">
 
             <img src="img/CleanShot 2023-03-01 at 12.42.03@2x.png" alt="img">
             <p>Web Development/Maintainance </p></a>
