--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
        <section id="home">
         <div class="content">
             <h3>K.Alex Ladwong</h3>
-            <p>I'm a Junior Front-End software engineer and Cyber Security Tester based in Kampala, Uganda.<p>
-                
-                I have great interest in full-stack development, artificial
+            <p>I'm a Junior Front-End software engineer: I have great interest in full-stack development, artificial
                 intelligence, human-computer interactions, and everything in between.
             </p>
             <a href="#contact" class="btn">Reach Me</a>
